--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,12 @@
             <artifactId>testng</artifactId>
             <version>7.9.0</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-api</artifactId>
-            <version>4.15.0</version>
-            <scope>test</scope>
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.seleniumhq.selenium</groupId>-->
+<!--            <artifactId>selenium-api</artifactId>-->
+<!--            <version>4.15.0</version>-->
+<!--            <scope>test</scope>-->
         </dependency>
     </dependencies>
 </project>
